Adding all the required dependencies manually to prevent PIP installation issues on Travis CI. PyLearn2 fails to install within a virtualenv sandbox?

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-git+https://github.com/Theano/Theano.git
+argparse
+pyyaml
+scipy>=0.11
+numpy>=1.9
+cython>=0.22
+git+https://github.com/Theano/Theano.git@rel-0.7
 git+https://github.com/lisa-lab/pylearn2.git
