--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "2.7"
   - "3.4"
 
-install: pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
 
-script: nosetests -v sknn
+script:
+  - nosetests -v sknn
