--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq python-numpy python-scipy
   - pip install argparse pyyaml cython
-  - pip install -r requirements.txt
+  - pip install git+https://github.com/Theano/Theano.git@rel-0.7
+  - pip install git+https://github.com/lisa-lab/pylearn2.git
 
 script:
   - nosetests -v sknn
