--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,17 @@ python:
   - "2.7"
   - "3.4"
 
+before_install:
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - /bin/sh miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+
 install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq python-numpy python-scipy
-  - pip install argparse pyyaml cython
-  - pip install git+https://github.com/Theano/Theano.git@rel-0.7
-  - pip install git+https://github.com/lisa-lab/pylearn2.git
+  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION numpy scipy cython nose pyyaml argparse pip
+  - source activate pyenv
+  - pip install -q git+https://github.com/Theano/Theano.git@rel-0.7
+  - pip install -q git+https://github.com/lisa-lab/pylearn2.git
 
 script:
   - nosetests -v sknn
