--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - /bin/sh miniconda.sh -b
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda/bin:$PATH
   - conda update --yes conda
 
