Time out installing PyLearn2 on Travis CI because no output was received.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION numpy scipy cython nose pyyaml pip
   - source activate pyenv
   - pip install -q git+https://github.com/Theano/Theano.git@rel-0.7
-  - pip install -q git+https://github.com/lisa-lab/pylearn2.git
+  - pip install git+https://github.com/lisa-lab/pylearn2.git
 
 script:
   - nosetests -v sknn
