Attempt to fix lack of output, pip installation probably missing a package (argparse).

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,10 @@ before_install:
   - conda update --yes conda
 
 install:
-  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION numpy scipy cython nose pyyaml pip
+  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION pip numpy scipy cython nose pyyaml
   - source activate pyenv
   - pip install -q git+https://github.com/Theano/Theano.git@rel-0.7
+  - pip install -q argparse
   - pip install git+https://github.com/lisa-lab/pylearn2.git
 
 script:
