Getting around the manual prompt required by PyLearn2 when using PIP. It's setup in develop mode now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - source activate pyenv
   - pip install -q git+https://github.com/Theano/Theano.git@rel-0.7
   - pip install -q argparse
-  - pip install git+https://github.com/lisa-lab/pylearn2.git
+  - pip install -e git+https://github.com/lisa-lab/pylearn2.git#egg=pylearn2
 
 script:
   - nosetests -v sknn
