--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - conda update --yes conda
 
 install:
-  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION pip numpy scipy cython nose pyyaml
+  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION pip numpy scipy cython matplotlib nose pyyaml
   - source activate pyenv
   - pip install -q git+https://github.com/Theano/Theano.git@rel-0.7
   - pip install -q argparse
