--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - pip install -e git+https://github.com/lisa-lab/pylearn2.git#egg=pylearn2
 
 script:
+  - echo -e "[run]\nomit=*pywrap2*" > .coveragerc
   - nosetests --with-coverage --cover-package=sknn -v sknn
 
 after_success:
