Another check to test for Theano import warning, fix for other broken tests by reimporting theano.

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,10 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
+.coveragerc
 .coverage.*
 .cache
+.settings
 nosetests.xml
 coverage.xml
 *,cover
