--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -q argparse coveralls lasagne
 
 script:
-  - echo -e "[run]\nomit=\n    sknn/backend/pylearn2/pywrap2.py\n    sknn/backend/deepy/*\n    sknn/backend/__init__.py*\n" > .coveragerc
+  - echo -e "[run]\nomit=\n    *ae.py*\n    sknn/backend/deepy/*\n    sknn/backend/__init__.py*\n" > .coveragerc
   - nosetests --with-coverage --cover-package=sknn -v sknn.tests
 
 after_success:
