Fix for automated test framework.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ install:
   - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION pip numpy scipy cython matplotlib scikit-learn nose pyyaml
   - source activate pyenv
   - pip install -q git+https://github.com/Theano/Theano.git@a85a44fc#egg=Theano==0.8-dev
-  - pip install -q argparse coveralls lasagne
+  - pip install -q git+https://github.com/Lasagne/Lasagne.git@ffed652#egg=Lasagne==0.4-dev
+  - pip install -q argparse coveralls 
 
 script:
   - echo -e "[run]\nomit=\n    *ae.py*\n    sknn/backend/deepy/*\n    sknn/backend/__init__.py*\n" > .coveragerc
