--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - conda update --yes --quiet conda
 
 install:
-  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION pip numpy scipy cython matplotlib scikit-learn nose pyyaml
+  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION pip numpy scipy pandas cython matplotlib scikit-learn nose pyyaml
   - source activate pyenv
   - pip install -q git+https://github.com/Theano/Theano.git@a85a44fc#egg=Theano==0.8-dev
   - pip install -q git+https://github.com/Lasagne/Lasagne.git@ffed652#egg=Lasagne==0.4-dev
