--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 scikit-learn>=0.17
-git+https://github.com/Theano/Theano.git@e7f6b32#egg=Theano==0.8-dev
+Theano>=0.8.0
 git+https://github.com/Lasagne/Lasagne.git@664b8a4#egg=Lasagne==0.2-dev
